# SRV

./: README.md
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
lab1/src/: l11.cpp
lab_n1/build_release/: lab1
lab_n1/lab1/: CMakeLists.txt
lab_n1/lab1/src/: main  main.cpp
lab_n2/build_release/: CMakeCache.txt  lab1
lab_n2/lab1/src/: main.cpp
lab_n3/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  lab1
lab_n3/lab3/src/: main.cpp
lab_n4/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  lab1
lab_n4/lab4/src/: main.cpp
lab_n5/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  lab1
lab_n5/lab5/src/: main.cpp
lab_n6/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  lab1
lab_n6/lab6/: CMakeLists.txt
lab_n6/lab6/src/: main.cpp
lab_n7/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  lab1  lab7_main  tcp_client  tcp_server  udp_client  udp_server
lab_n7/lab7/: CMakeLists.txt
lab_n7/lab7/src/: main.cpp  tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
